# s3ls-parallel

./: Main.hs  s3parallel.cabal  stack.yaml
scripts/: find-incomplete.hs
src/: Main.hs  OrdSeq.hs  S3Parallel.hs
tests/: TestMain.hs
