name:                s3parallel
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/s3parallel#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
copyright:           2016 Andrew Browne
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable s3parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-concurrency
                     , amazonka
                     , amazonka-s3
                     , async
                     , mtl
                     , deepseq
                     , conduit
                     , conduit-extra
                     , text
                     , time
                     , lens
                     , bytestring
                     , resourcet
                     , ekg
                     , ekg-core
