name:                s3parallel
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/s3parallel#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
copyright:           2016 Andrew Browne
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     S3Parallel
  build-depends:       base >= 4.7 && < 5
                     , amazonka-s3
                     , lens
                     , text
                     , deepseq

executable s3parallel-exe
  ghc-options:         -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , s3parallel
                     , pipes
                     , pipes-concurrency
                     , amazonka
                     , amazonka-s3
                     , async
                     , mtl
                     , deepseq
                     , containers
                     , uuid
                     , random
                     , conduit
                     , conduit-extra
                     , text
                     , time
                     , lens
                     , bytestring
                     , resourcet
                     , ekg
                     , ekg-core

Test-Suite s3parallel-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      tests
  main-is:             TestMain.hs
  default-language:    Haskell2010
  build-depends:       base
                     , s3parallel
                     , data-ordlist
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck 
